# ahoi-sandbox

./: .gitmodules  reciever.py  sender.py
ahoi-serial-c/: CMakeLists.txt  config.cmake  receiver-config.cmake  sender-config.cmake
ahoi-serial-c/include/: ahoi_serial.h:Zone.Identifier
ahoi-serial-c/include/commons/: ahoi_serial.h
ahoi-serial-c/patches/: ascon-fix.patch
ahoi-serial-c/src/: serial_utils.c
ahoi-serial-c/src/commons/: CMakeLists.txt  serial_utils.c
ahoi-serial-c/src/receiver/: CMakeLists.txt  main.c  receiver.c
ahoi-serial-c/src/sender/: CMakeLists.txt  main.c  sender.c
ahoi_serial/: reciever.py
ahoi_serial_c/: CMakeLists.txt
ahoi_serial_c/include/: ahoi_serial.h
ahoi_serial_c/src/: receiver.c  receiver.c:Zone.Identifier  sender.c
ascon-demo/: CMakeLists.txt  config.cmake
ascon-demo/cmake/: GitAddSubmodule.cmake
ascon-demo/patches/: ascon-fix.patch
ascon-demo/src/: CMakeLists.txt  main.c
